--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,9 @@ node_js:
   - "0.12"
   - "0.10"
   - "iojs"
+before_install:
+  - npm install --global codeclimate-test-reporter
+script:
+  - make check-coverage
+after_script:
+  - codeclimate-test-reporter < coverage/lcov.info
